[update] publish result page

--- a/templates/publish/publish_sheets_list.html
+++ b/templates/publish/publish_sheets_list.html
@@ -23,14 +23,14 @@
                         TAPD URL：{{ sheet.tapd_url }}<br>
 
                         {% if sheet.approve_level == '1' %}
-                            审批级别：<span>{{ sheet.level }}</span><br>
+                            审批级别：<span>{{ sheet.level }}</span>
                         {% elif sheet.approve_level == '2' %}
                             审批级别：<span style="color: #0e9aef">{{ sheet.level }}</span><br>
-                            一级审批人：<span>{{ sheet.first_str }}</span><br>
+                            一级审批人：<span>{{ sheet.first_str }}</span>
                         {% elif sheet.approve_level == '3' %}
                             审批级别：<span style="color: orange">{{ sheet.level }}</span><br>
                             一级审批人：<span>{{ sheet.first_str }}</span><br>
-                            二级审批人：<span>{{ sheet.second_str }}</span><br>
+                            二级审批人：<span>{{ sheet.second_str }}</span>
                         {% endif %}
 
 
@@ -74,14 +74,14 @@
                         TAPD URL：{{ sheet.tapd_url }}<br>
 
                         {% if sheet.approve_level == '1' %}
-                            审批级别：<span>{{ sheet.level }}</span><br>
+                            审批级别：<span>{{ sheet.level }}</span>
                         {% elif sheet.approve_level == '2' %}
                             审批级别：<span style="color: #0e9aef">{{ sheet.level }}</span><br>
-                            一级审批人：<span>{{ sheet.first_str }}</span><br>
+                            一级审批人：<span>{{ sheet.first_str }}</span>
                         {% elif sheet.approve_level == '3' %}
                             审批级别：<span style="color: orange">{{ sheet.level }}</span><br>
                             一级审批人：<span>{{ sheet.first_str }}</span><br>
-                            二级审批人：<span>{{ sheet.second_str }}</span><br>
+                            二级审批人：<span>{{ sheet.second_str }}</span>
                         {% endif %}
 
                         {#                        事前SQL：{{ sheet.sql_before }}<br>#}
@@ -137,14 +137,14 @@
                         TAPD URL：{{ sheet.tapd_url }}<br>
 
                         {% if sheet.approve_level == '1' %}
-                            审批级别：<span>{{ sheet.level }}</span><br>
+                            审批级别：<span>{{ sheet.level }}</span>
                         {% elif sheet.approve_level == '2' %}
                             审批级别：<span style="color: #0e9aef">{{ sheet.level }}</span><br>
-                            一级审批人：<span>{{ sheet.first_str }}</span><br>
+                            一级审批人：<span>{{ sheet.first_str }}</span>
                         {% elif sheet.approve_level == '3' %}
                             审批级别：<span style="color: orange">{{ sheet.level }}</span><br>
                             一级审批人：<span>{{ sheet.first_str }}</span><br>
-                            二级审批人：<span>{{ sheet.second_str }}</span><br>
+                            二级审批人：<span>{{ sheet.second_str }}</span>
                         {% endif %}
 
                         {#                        事前SQL：{{ sheet.sql_before }}<br>#}
@@ -219,4 +219,4 @@
     </div>
 </div>
 
-<script src="/static/js/custom/publish_sheet.js"></script>
+<script src="/static/js/custom/publish_sheet_list.js"></script>
