--- a/templates/publish/gogroup_init.html
+++ b/templates/publish/gogroup_init.html
@@ -22,6 +22,7 @@
             <li id="publishSheet" class=""><a data-toggle="tab" href="#tab-2">发布单</a></li>
             <li id="createTab" class="" style="display: none"><a data-toggle="tab" href="#tab-3">创建发布单</a></li>
             <li id="doneSheet" class="" style="display: none"><a data-toggle="tab" href="#tab-4">完成&作废</a></li>
+            <li id="publishResult" class="" style="display: none"><a data-toggle="tab" href="#tab-7">发布结果</a></li>
         </ul>
         <div class="tab-content">
             <div id="tab-1" class="tab-pane active">
@@ -144,7 +145,8 @@
                                                     {{ projectinfo.creator }}
                                                 </p>
                                             </li>
-                                            <div class="modal inmodal fade" id="deleteProjectModal_{{ projectinfo.project_id }}" tabindex="-1"
+                                            <div class="modal inmodal fade"
+                                                 id="deleteProjectModal_{{ projectinfo.project_id }}" tabindex="-1"
                                                  role="dialog"
                                                  aria-labelledby="addModalLabel"
                                                  aria-hidden="true">
@@ -469,10 +471,16 @@
                 </div>
             </div>
 
+            <div id="tab-7" class="tab-pane">
+                <div class="wrapper wrapper-content animated fadeInRight">
+                    <div class="row" id="publish_result">
+
+                    </div>
+                </div>
+            </div>
+
         </div>
     </div>
-
-
 
 
     <script src="/static/js/custom/gogroup_init.js"></script>
