--- a/templates/publish/publish_done.html
+++ b/templates/publish/publish_done.html
@@ -18,14 +18,14 @@
                         TAPD URL：{{ sheet.tapd_url }}<br>
 
                         {% if sheet.approve_level == '1' %}
-                            审批级别：<span>{{ sheet.level }}</span><br>
+                            审批级别：<span>{{ sheet.level }}</span>
                         {% elif sheet.approve_level == '2' %}
                             审批级别：<span style="color: #0e9aef">{{ sheet.level }}</span><br>
-                            一级审批人：<span>{{ sheet.first_str }}</span><br>
+                            一级审批人：<span>{{ sheet.first_str }}</span>
                         {% elif sheet.approve_level == '3' %}
                             审批级别：<span style="color: orange">{{ sheet.level }}</span><br>
                             一级审批人：<span>{{ sheet.first_str }}</span><br>
-                            二级审批人：<span>{{ sheet.second_str }}</span><br>
+                            二级审批人：<span>{{ sheet.second_str }}</span>
                         {% endif %}
 
                         {#                        事前SQL：{{ sheet.sql_before }}<br>#}
@@ -59,14 +59,14 @@
                         TAPD URL：{{ sheet.tapd_url }}<br>
 
                         {% if sheet.approve_level == '1' %}
-                            审批级别：<span>{{ sheet.level }}</span><br>
+                            审批级别：<span>{{ sheet.level }}</span>
                         {% elif sheet.approve_level == '2' %}
                             审批级别：<span style="color: #0e9aef">{{ sheet.level }}</span><br>
-                            一级审批人：<span>{{ sheet.first_str }}</span><br>
+                            一级审批人：<span>{{ sheet.first_str }}</span>
                         {% elif sheet.approve_level == '3' %}
                             审批级别：<span style="color: orange">{{ sheet.level }}</span><br>
                             一级审批人：<span>{{ sheet.first_str }}</span><br>
-                            二级审批人：<span>{{ sheet.second_str }}</span><br>
+                            二级审批人：<span>{{ sheet.second_str }}</span>
                         {% endif %}
 
                         {#                        事前SQL：{{ sheet.sql_before }}<br>#}
@@ -100,14 +100,14 @@
                         TAPD URL：{{ sheet.tapd_url }}<br>
 
                         {% if sheet.approve_level == '1' %}
-                            审批级别：<span>{{ sheet.level }}</span><br>
+                            审批级别：<span>{{ sheet.level }}</span>
                         {% elif sheet.approve_level == '2' %}
                             审批级别：<span style="color: #0e9aef">{{ sheet.level }}</span><br>
-                            一级审批人：<span>{{ sheet.first_str }}</span><br>
+                            一级审批人：<span>{{ sheet.first_str }}</span>
                         {% elif sheet.approve_level == '3' %}
                             审批级别：<span style="color: orange">{{ sheet.level }}</span><br>
                             一级审批人：<span>{{ sheet.first_str }}</span><br>
-                            二级审批人：<span>{{ sheet.second_str }}</span><br>
+                            二级审批人：<span>{{ sheet.second_str }}</span>
                         {% endif %}
 
                         {#                        事前SQL：{{ sheet.sql_before }}<br>#}
