--- a/templates/publish/publish_sheet_detail.html
+++ b/templates/publish/publish_sheet_detail.html
@@ -301,12 +301,15 @@
         </form>
     </div>
     <div class="modal-footer">
+        {% if content.can_see_result %}
+            <button type="button" class="btn btn-warning" data-dismiss="modal" onclick="see_publish_result('{{ content.id }}')">发布结果</button>
+        {% endif %}
         <button type="button" class="btn btn-white" data-dismiss="modal">关闭</button>
-        {% if content.can_delete == '1' or content.approve_level == '1' %}
+        {% if content.can_delete == '1' %}
             <button type="button" class="btn btn-danger" data-dismiss="modal" onclick="delete_publishsheet('{{ content.id }}')">删除</button>
         {% endif %}
         {% if content.can_publish == '1' %}
-            <button type="button" class="btn btn-primary" data-dismiss="modal" onclick="start_publish('{{ content.id }}')">确认发布</button>
+            <button type="button" class="btn btn-primary" data-dismiss="modal" onclick="start_publish('{{ content.id }}')">开始发布</button>
         {% endif %}
     </div>
 
