--- a/templates/publish/publish_sheet_detail.html
+++ b/templates/publish/publish_sheet_detail.html
@@ -302,7 +302,7 @@
     </div>
     <div class="modal-footer">
         {% if content.can_see_result %}
-            <button type="button" class="btn btn-warning" data-dismiss="modal" onclick="see_publish_result('{{ content.id }}')">发布结果</button>
+            <button type="button" class="btn btn-warning" data-dismiss="modal" onclick="window.location.href='/asset/project/publishsheet/publish/result/?sheet_id='+{{ content.id }}">发布结果</button>
         {% endif %}
         <button type="button" class="btn btn-white" data-dismiss="modal">关闭</button>
         {% if content.can_delete == '1' %}
