[update]Paginator done

--- a/templates/approve/approve_sheet.html
+++ b/templates/approve/approve_sheet.html
@@ -61,12 +61,12 @@
                                     <div>
                                         <label>
                                             <input type="radio" value="1" id="if_review1"
-                                                   name="if_review" {% if approve_sheet.if_review == '1' %}checked=""{% endif %}>&nbsp;是
+                                                   name="if_review" {% if approve_sheet.if_review == '1' %}checked=""{% endif %} disabled>&nbsp;是
                                         </label>
                                         &nbsp; &nbsp; &nbsp; &nbsp;
                                         <label>
                                             <input type="radio" value="2" id="if_review2"
-                                                   name="if_review" {% if approve_sheet.if_review == '2' %}checked=""{% endif %}>&nbsp;否
+                                                   name="if_review" {% if approve_sheet.if_review == '2' %}checked=""{% endif %} disabled>&nbsp;否
                                         </label>
                                     </div>
                                 </div>
@@ -139,12 +139,12 @@
                                     <div>
                                         <label>
                                             <input type="radio" value="2" id="if_browse1"
-                                                   name="if_browse" {% if approve_sheet.if_browse == '1' %}checked=""{% endif %}>&nbsp;是
+                                                   name="if_browse" {% if approve_sheet.if_browse == '1' %}checked=""{% endif %} disabled>&nbsp;是
                                         </label>
                                         &nbsp;&nbsp;&nbsp;&nbsp;
                                         <label>
                                             <input type="radio" value="1" id="if_browse2"
-                                                   name="if_browse"{% if approve_sheet.if_browse == '2' %}checked=""{% endif %}>&nbsp;否
+                                                   name="if_browse"{% if approve_sheet.if_browse == '2' %}checked=""{% endif %} disabled>&nbsp;否
                                         </label>
                                     </div>
                                 </div>
@@ -155,12 +155,12 @@
                                     <div>
                                         <label>
                                             <input type="radio" value="2" id="if_order1"
-                                                   name="if_order" {% if approve_sheet.if_order == '1' %}checked=""{% endif %}>&nbsp;是
+                                                   name="if_order" {% if approve_sheet.if_order == '1' %}checked=""{% endif %} disabled>&nbsp;是
                                         </label>
                                         &nbsp;&nbsp;&nbsp;&nbsp;
                                         <label>
                                             <input type="radio" value="1" id="if_order2"
-                                                   name="if_order" {% if approve_sheet.if_order == '2' %}checked=""{% endif %}>&nbsp;否
+                                                   name="if_order" {% if approve_sheet.if_order == '2' %}checked=""{% endif %} disabled>&nbsp;否
                                         </label>
                                     </div>
                                 </div>
@@ -174,12 +174,12 @@
                                     <div>
                                         <label>
                                             <input type="radio" value="2" id="if_buy1"
-                                                   name="if_buy" {% if approve_sheet.if_buy == '1' %}checked=""{% endif %}>&nbsp;是
+                                                   name="if_buy" {% if approve_sheet.if_buy == '1' %}checked=""{% endif %} disabled>&nbsp;是
                                         </label>
                                         &nbsp;&nbsp;&nbsp;&nbsp;
                                         <label>
                                             <input type="radio" value="1" id="if_buy2"
-                                                   name="if_buy" {% if approve_sheet.if_buy == '2' %}checked=""{% endif %}>&nbsp;否
+                                                   name="if_buy" {% if approve_sheet.if_buy == '2' %}checked=""{% endif %} disabled>&nbsp;否
                                         </label>
                                     </div>
                                 </div>
