[update]cancel fadeIn

--- a/templates/alert_project_index.html
+++ b/templates/alert_project_index.html
@@ -54,7 +54,7 @@
 <p class="text-center">
     <a target="_blank" href="https://www.tapd.cn/20257541/markdown_wikis/#1120257541001008845" class="center-block">告警帮助文档</a>
 </p>
-<div class="wrapper wrapper-content animated fadeInRight">
+<div class="wrapper wrapper-content animated fadeIn">
     <div class="row">
         <div class="col-sm-12">
             <div class="ibox float-e-margins" id="all">
