--- a/templates/publish/template_list.html
+++ b/templates/publish/template_list.html
@@ -29,7 +29,7 @@
         <div class="tab-content">
 
             <div id="tab-5" class="tab-pane">
-                <div class="wrapper wrapper-content animated fadeInRight">
+                <div class="wrapper wrapper-content">
                     <div class="row" id="init_template">
                         <div class="col-lg-6">
                             <div class="ibox">
@@ -167,7 +167,7 @@
                                                  aria-labelledby="addModalLabel"
                                                  aria-hidden="true">
                                                 <div class="modal-dialog modal-lg">
-                                                    <div class="modal-content animated fadeIn">
+                                                    <div class="modal-content">
                                                         <div class="modal-header">
                                                             <button type="button" class="close"
                                                                     data-dismiss="modal"><span
