--- a/templates/alert_item_index.html
+++ b/templates/alert_item_index.html
@@ -56,7 +56,7 @@
 {% endblock %}
 {% block content %}
 
-<div class="wrapper wrapper-content animated fadeInRight">
+<div class="wrapper wrapper-content animated fadeIn">
     <div class="row">
         <div class="col-sm-12">
             <div class="ibox float-e-margins" id="all">
