--- a/templates/approve/approve_sheet_detail.html
+++ b/templates/approve/approve_sheet_detail.html
@@ -1,4 +1,4 @@
-<div class="modal-content animated fadeIn">
+<div class="modal-content">
     <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal"><span
                 aria-hidden="true">×</span><span class="sr-only">Close</span></button>
