--- a/templates/get_go_revert_list.html
+++ b/templates/get_go_revert_list.html
@@ -4,7 +4,7 @@
 {% load cmdbtags %}
 
 
- <div class="wrapper wrapper-content animated fadeInRight">
+ <div class="wrapper wrapper-content animated fadeIn">
     <div class="row">
         <div class="col-sm-12">
             <div class="ibox float-e-margins" id="all">
