--- a/templates/nav_li_profile.html
+++ b/templates/nav_li_profile.html
@@ -14,7 +14,7 @@
                 </span>
             </span>
         </a>
-        <ul class="dropdown-menu animated fadeInRight m-t-xs">
+        <ul class="dropdown-menu animated fadeIn m-t-xs">
             <li><a value="{% url 'user_profile' %}?id={{ session_user_id }}" class="iframe_user">个人信息</a></li>
             <li><a href="{% url 'user_update' %}">修改信息</a></li>
 {#            {% if not user.role == 'CU' %}#}
