--- a/templates/project_crontab/crontab_list.html
+++ b/templates/project_crontab/crontab_list.html
@@ -4,7 +4,7 @@
     <p class="text-center"><a target="_blank"
            href="https://www.tapd.cn/20257541/markdown_wikis/view/#1120257541001010145"
            class="center-block">帮助文档</a></p>
-    <div class="wrapper wrapper-content animated fadeInRight">
+    <div class="wrapper wrapper-content animated fadeIn">
         <div class="row">
             <div class="col-sm-12">
                 <div class="ibox float-e-margins" id="all">
