--- a/templates/project_crontab/svn_list.html
+++ b/templates/project_crontab/svn_list.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-    <div class="wrapper wrapper-content animated fadeInRight">
+    <div class="wrapper wrapper-content animated fadeIn">
         <div class="row">
             <div class="col-sm-12">
                 <div class="ibox float-e-margins" id="all">
