--- a/templates/publish/gogroup_init.html
+++ b/templates/publish/gogroup_init.html
@@ -27,7 +27,7 @@
         </ul>
         <div class="tab-content">
             <div id="tab-1" class="tab-pane active">
-                <div class="wrapper wrapper-content animated fadeInRight">
+                <div class="wrapper wrapper-content">
                     <div class="row">
                         <div class="col-lg-6">
                             <div class="ibox">
@@ -152,7 +152,7 @@
                                                  aria-labelledby="addModalLabel"
                                                  aria-hidden="true">
                                                 <div class="modal-dialog modal-lg">
-                                                    <div class="modal-content animated fadeIn">
+                                                    <div class="modal-content">
                                                         <div class="modal-header">
                                                             <button type="button" class="close"
                                                                     data-dismiss="modal"><span
