--- a/templates/publish/level_list.html
+++ b/templates/publish/level_list.html
@@ -26,7 +26,7 @@
         </ul>
         <div class="tab-content">
             <div id="tab-6" class="tab-pane">
-                <div class="wrapper wrapper-content animated fadeInRight">
+                <div class="wrapper wrapper-content">
                     <div class="row text-right">
                         <div class="col-lg-12">
                             <button class="btn btn-info btn-rounded m-t-n-xs" type="submit"
@@ -223,7 +223,7 @@
                                                  aria-labelledby="addModalLabel"
                                                  aria-hidden="true">
                                                 <div class="modal-dialog modal-lg">
-                                                    <div class="modal-content animated fadeIn">
+                                                    <div class="modal-content">
                                                         <div class="modal-header">
                                                             <button type="button" class="close"
                                                                     data-dismiss="modal"><span
@@ -275,7 +275,7 @@
                  aria-labelledby="addModalLabel"
                  aria-hidden="true">
                 <div class="modal-dialog modal-lg">
-                    <div class="modal-content animated fadeIn">
+                    <div class="modal-content">
                         <div class="modal-header">
                             <button type="button" class="close" data-dismiss="mSQL：odal"><span
                                     aria-hidden="true">×</span><span class="sr-only">Close</span></button>
