--- a/templates/publish/publish_sheets_list.html
+++ b/templates/publish/publish_sheets_list.html
@@ -27,7 +27,7 @@
         <div class="tab-content">
 
             <div id="tab-2" class="tab-pane">
-                <div class="wrapper wrapper-content animated fadeInRight">
+                <div class="wrapper wrapper-content">
 
                     <div class="row" id="publish_sheet">
                         <div class="col-lg-4">
@@ -216,7 +216,7 @@
          aria-labelledby="addModalLabel"
          aria-hidden="true">
         <div class="modal-dialog modal-lg">
-            <div class="modal-content animated fadeIn">
+            <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal"><span
                             aria-hidden="true">×</span><span class="sr-only">Close</span></button>
