--- a/templates/user_add.html
+++ b/templates/user_add.html
@@ -10,7 +10,7 @@
         </div>
     </div>
 
-    <div class="wrapper wrapper-content animated fadeInRight">
+    <div class="wrapper wrapper-content animated fadeIn">
         {% if request.user.is_superuser %}
             <form class="col-lg-12" action="{% url 'user_add' %}" method="post" id="checkall" name="">
                 <div class="tab-content">
