--- a/templates/user_edit.html
+++ b/templates/user_edit.html
@@ -8,7 +8,7 @@
         <div class="col-lg-2">
         </div>
     </div>
-    <div class="wrapper wrapper-content animated fadeInRight">
+    <div class="wrapper wrapper-content animated fadeIn">
         {% if request.user.is_superuser %}
             <form class="col-lg-12" action="/users/user_edit/{{ user_info.id }}/" method="post">
                 <div class="tab-content">
