[update]send email

--- a/templates/approve/approve_list.html
+++ b/templates/approve/approve_list.html
@@ -14,8 +14,8 @@
 {% block content %}
     <div class="tabs-container">
         <ul class="nav nav-tabs">
-            <li id="approveList" class="active"><a data-toggle="tab" href="#tab-1">审批发布单</a></li>
-            <li id="approveDetail" class="" style="display: none"><a data-toggle="tab" href="#tab-2">审批</a></li>
+            <li id="approveList" class="active"><a href="/asset/approve/list/">审批发布单</a></li>
+            <li id="approveDetail" class="" style="display: none"><a href="/asset/approve/init/">审批</a></li>
         </ul>
         <div class="tab-content">
             <div id="tab-1" class="tab-pane active">
