--- a/templates/approve/approve_sheet_detail.html
+++ b/templates/approve/approve_sheet_detail.html
@@ -303,7 +303,7 @@
     <div class="modal-footer">
         <button type="button" class="btn btn-white" data-dismiss="modal">关闭</button>
         {% if content.can_approve == '1' %}
-            <button type="button" class="btn btn-primary" data-dismiss="modal" onclick="approveSheet('{{ content.id }}')">审批</button>
+            <button type="button" class="btn btn-primary" data-dismiss="modal" onclick="window.location.href='/asset/approve/init/?sheet_id='+{{ content.id }}">审批</button>
         {% endif %}
     </div>
 
