[update]publish result

--- a/templates/approve/approve_sheet.html
+++ b/templates/approve/approve_sheet.html
@@ -20,7 +20,7 @@
         <div class="tab-content">
 
             <div id="tab-2" class="tab-pane">
-                <div class="wrapper wrapper-content">
+                <div class="wrapper wrapper-content animated fadeInRight">
                     <div class="row">
                         <div class="col-lg-12">
                             <div class="ibox">
@@ -293,7 +293,7 @@
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-white" data-dismiss="modal">关闭</button>
                                 <button type="button" class="btn btn-danger"
-                                        onclick="refuseButton('{{ approve_sheet.id }}')">拒绝
+                                        onclick="refuseButton('{{ approve_sheet.id }}')" id="refuseButtonId">拒绝
                                 </button>
                             </div>
                         </div>
