--- a/templates/publish/publish_create.html
+++ b/templates/publish/publish_create.html
@@ -28,7 +28,7 @@
         </ul>
         <div class="tab-content">
             <div id="tab-3" class="tab-pane active">
-                <div class="wrapper wrapper-content">
+                <div class="wrapper wrapper-content animated fadeInRight">
                     <div class="row">
                         <div class="col-lg-12">
                             <div class="ibox">
