--- a/templates/publish/publish_done.html
+++ b/templates/publish/publish_done.html
@@ -29,7 +29,7 @@
         <div class="tab-content">
 
             <div id="tab-4" class="tab-pane">
-                <div class="wrapper wrapper-content">
+                <div class="wrapper wrapper-content animated fadeInRight">
                     <div class="row" id="done_outtime_sheet">
                         <div class="col-lg-4">
                             <div class="ibox">
