--- a/templates/publish/publish_sheets_list.html
+++ b/templates/publish/publish_sheets_list.html
@@ -27,7 +27,7 @@
         <div class="tab-content">
 
             <div id="tab-2" class="tab-pane">
-                <div class="wrapper wrapper-content">
+                <div class="wrapper wrapper-content animated fadeInRight">
 
                     <div class="row" id="publish_sheet">
                         <div class="col-lg-4">
