--- a/templates/publish/template_list.html
+++ b/templates/publish/template_list.html
@@ -29,7 +29,7 @@
         <div class="tab-content">
 
             <div id="tab-5" class="tab-pane">
-                <div class="wrapper wrapper-content">
+                <div class="wrapper wrapper-content animated fadeInRight">
                     <div class="row" id="init_template">
                         <div class="col-lg-6">
                             <div class="ibox">
