--- a/templates/approve/approve_list.html
+++ b/templates/approve/approve_list.html
@@ -19,7 +19,7 @@
         </ul>
         <div class="tab-content">
             <div id="tab-1" class="tab-pane active">
-                <div class="wrapper wrapper-content">
+                <div class="wrapper wrapper-content animated fadeInRight">
                     <div class="row">
                         <div class="col-lg-4">
                             <div class="ibox">
@@ -175,7 +175,7 @@
             </div>
 
             <div id="tab-2" class="tab-pane">
-                <div class="wrapper wrapper-content">
+                <div class="wrapper wrapper-content animated fadeInRight">
                     <div class="row">
                         <div class="col-lg-12">
                             <div class="ibox">
