--- a/templates/publish/gogroup_init.html
+++ b/templates/publish/gogroup_init.html
@@ -27,7 +27,7 @@
         </ul>
         <div class="tab-content">
             <div id="tab-1" class="tab-pane active">
-                <div class="wrapper wrapper-content">
+                <div class="wrapper wrapper-content animated fadeInRight">
                     <div class="row">
                         <div class="col-lg-6">
                             <div class="ibox">
