--- a/templates/publish/level_list.html
+++ b/templates/publish/level_list.html
@@ -26,7 +26,7 @@
         </ul>
         <div class="tab-content">
             <div id="tab-6" class="tab-pane">
-                <div class="wrapper wrapper-content">
+                <div class="wrapper wrapper-content animated fadeInRight">
                     <div class="row text-right">
                         <div class="col-lg-12">
                             <button class="btn btn-info btn-rounded m-t-n-xs" type="submit"
