--- a/templates/publish/publish_result.html
+++ b/templates/publish/publish_result.html
@@ -29,7 +29,7 @@
         <div class="tab-content">
 
             <div id="tab-7" class="tab-pane active">
-                <div class="wrapper wrapper-content">
+                <div class="wrapper wrapper-content animated fadeInRight">
                     <div class="row" id="publish_result">
                         <div class="col-lg-12">
                             <div class="ibox">
