--- a/templates/publish/publish_result.html
+++ b/templates/publish/publish_result.html
@@ -32,31 +32,57 @@
                 <div class="wrapper wrapper-content animated fadeInRight">
                     <div class="row" id="publish_result">
                         <div class="col-lg-12">
-                            <div class="ibox">
-                                <div class="ibox-content">
-                                    <div class="text-center">
-                                        <h3>发布结果</h3>
-                                        <p style="color: blue"><i class="fa fa-check-square-o"></i> 服务发布上线后，请检查服务是否正常！！！
-                                        </p>
+                            {% if publish_result %}
+                                <div class="ibox">
+                                    <div class="ibox-content">
+                                        <div class="text-center">
+                                            <h3>发布结果</h3>
+                                            <p style="color: blue"><i class="fa fa-check-square-o"></i>
+                                                服务发布上线后，请检查服务是否正常！！！
+                                            </p>
+                                        </div>
+
+                                        <ul class="sortable-list connectList agile-list ui-sortable" id="publish_done">
+                                            {% for dic in publish_result %}
+                                                <li {% if publish_ok == '1' %} class="success-element" {% else %}
+                                                                               class="danger-element" {% endif %}>
+                                                    {% for k,v in dic.items %}
+                                                        {% if k %}
+                                                            <h2 style="color: red">{{ k }}:</h2>
+
+                                                            <pre style="border: none">
+                                                            <li>{{ v }}</li>
+                                                            </pre>
+                                                        {% endif %}
+                                                    {% endfor %}
+                                                </li>
+                                            {% endfor %}
+                                        </ul>
                                     </div>
-
-                                    <ul class="sortable-list connectList agile-list ui-sortable" id="publish_done">
-                                        {% for dic in publish_result %}
-                                            <li {% if publish_ok == '1' %} class="success-element" {% else %}
-                                                                           class="danger-element" {% endif %}>
-                                                {% for k,v in dic.items %}
-                                                    <h2 style="color: red">{{ k }}:</h2>
-
-                                                    <pre style="border: none">
-                                                    <li>{{ v }}</li>
-                                                    </pre>
-
-                                                {% endfor %}
-                                            </li>
-                                        {% endfor %}
-                                    </ul>
                                 </div>
-                            </div>
+                            {% else %}
+                                <div class="ibox">
+                                    <div class="ibox-content">
+                                        <div class="text-center">
+                                            <h3>发布结果</h3>
+                                            <p style="color: blue"><i class="fa fa-check-square-o"></i>
+                                                服务发布上线后，请检查服务是否正常！！！
+                                            </p>
+                                        </div>
+
+                                        <ul class="sortable-list connectList agile-list ui-sortable"
+                                            id="publish_done_ex">
+                                            <li class="danger-element">
+                                                <h2 style="color: red">WARNING:</h2>
+                                                <pre style="border: none">
+                                            <li>请耐心等待发布完成</li>
+                                            </pre>
+
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            {% endif %}
                         </div>
                     </div>
                 </div>
