--- a/templates/email/publish_sheet.html
+++ b/templates/email/publish_sheet.html
@@ -19,7 +19,9 @@
                             <table width="100%" cellpadding="0" cellspacing="0">
                                 <tr>
                                     <td class="content-block">
-                                        <h2 class="aligncenter"><a {% if can_approve == '1' %}href="http://127.0.0.1:8010/asset/approve/init/?sheet_id={{ sheet.id }}"{% else %}href="http://127.0.0.1:8010/asset/project/publishsheet/list/"{% endif %}> {{ head_content }}</a>
+                                        <h2 class="aligncenter"><a
+                                                {% if can_approve == '1' %}href="http://127.0.0.1:8010/asset/approve/init/?sheet_id={{ sheet.id }}"
+                                                {% else %}href="http://127.0.0.1:8010/asset/project/publishsheet/list/"{% endif %}> {{ head_content }}</a>
                                         </h2>
                                     </td>
                                 </tr>
@@ -50,8 +52,13 @@
                                                 <td class="alignright">{{ sheet.services_str }}</td>
                                             </tr>
                                             <tr>
+                                                <td>审批等级</td>
+                                                <td class="alignright">{{ sheet.approval_level }}</td>
+                                            </tr>
+                                            <tr>
                                                 <td>紧急原因</td>
-                                                <td class="alignright">{% if sheet.reason %}{{ sheet.reason }}{% else %}无{% endif %}</td>
+                                                <td class="alignright">
+                                                    {% if sheet.reason %}{{ sheet.reason }}{% else %}无{% endif %}</td>
                                             </tr>
                                         </table>
                                     </td>
