[update]publish result

--- a/templates/publish/publish_result.html
+++ b/templates/publish/publish_result.html
@@ -72,8 +72,8 @@
 
                                         <ul class="sortable-list connectList agile-list ui-sortable"
                                             id="publish_done_ex">
-                                            <li class="danger-element">
-                                                <h2 style="color: red">WARNING:</h2>
+                                            <li class="warning-element">
+                                                <h2 style="color: orange">请等待:</h2>
                                                 <pre style="border: none">
                                             <li>请耐心等待发布完成，稍后请刷新</li>
                                             </pre>
