[update]publish result

--- a/templates/publish/publish_done.html
+++ b/templates/publish/publish_done.html
@@ -23,7 +23,7 @@
             <li id="createTab" class="" style="display: none"><a data-toggle="tab" href="#tab-3">创建发布单</a></li>
             <li id="doneSheet" class="active"><a href="/asset/project/publishsheet/list/done/">完成&作废</a>
             </li>
-            <li id="publishResult" class="" style="display: none"><a href="/asset/project/publishsheet/publish/result/">发布结果</a>
+            <li id="publishResult" class="" style="display: none"><a href=#>发布结果</a>
             </li>
         </ul>
         <div class="tab-content">
