--- a/templates/publish/publish_result.html
+++ b/templates/publish/publish_result.html
@@ -24,7 +24,7 @@
             <li id="doneSheet" class=""><a href="/asset/project/publishsheet/list/done/">完成&作废</a>
             </li>
             <li id="publishResult" class="active" style="display: none"><a
-                    href="/asset/project/publishsheet/publish/result/">发布结果</a></li>
+                    href=#>发布结果</a></li>
         </ul>
         <div class="tab-content">
 
