--- a/templates/publish/level_list.html
+++ b/templates/publish/level_list.html
@@ -22,7 +22,7 @@
             <li id="publishSheet" class=""><a href="/asset/project/publishsheet/list/">发布单</a></li>
             <li id="createTab" class="" style="display: none"><a data-toggle="tab" href="#tab-3">创建发布单</a></li>
             <li id="doneSheet" class=""><a href="/asset/project/publishsheet/list/done/">完成&作废</a></li>
-            <li id="publishResult" class="" style="display: none"><a href="/asset/project/publishsheet/publish/result/">发布结果</a></li>
+            <li id="publishResult" class="" style="display: none"><a href=#>发布结果</a></li>
         </ul>
         <div class="tab-content">
             <div id="tab-6" class="tab-pane">
