--- a/templates/approve/approve_sheet.html
+++ b/templates/approve/approve_sheet.html
@@ -12,6 +12,9 @@
     <script src="/static/js/datapicker/bootstrap-datepicker.js"></script>
 {% endblock %}
 {% block content %}
+    <p class="text-center"><a target="_blank"
+           href="https://www.tapd.cn/20257541/markdown_wikis/view/#1120257541001011548"
+           class="center-block">帮助文档</a></p>
     <div class="tabs-container">
         <ul class="nav nav-tabs">
             <li id="approveList" class="active"><a href="/asset/approve/list/">审批发布单</a></li>
