--- a/templates/publish/gogroup_init.html
+++ b/templates/publish/gogroup_init.html
@@ -14,6 +14,9 @@
     <script src="/static/js/datapicker/bootstrap-datepicker.js"></script>
 {% endblock %}
 {% block content %}
+    <p class="text-center"><a target="_blank"
+           href="https://www.tapd.cn/20257541/markdown_wikis/view/#1120257541001011545"
+           class="center-block">帮助文档</a></p>
     <div class="tabs-container">
         <ul class="nav nav-tabs">
             <li id="projectInfo" class="active"><a href="/asset/project/init/list/">项目初始化</a></li>
