--- a/templates/approve/approve_sheet.html
+++ b/templates/approve/approve_sheet.html
@@ -270,7 +270,7 @@
                             {#            </div>#}
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-white" data-dismiss="modal">关闭</button>
-                                <button type="button" class="btn btn-primary"
+                                <button type="button" class="btn btn-primary" id="agreeButtonId"
                                         onclick="agreeButton('{{ approve_sheet.id }}')">同意
                                 </button>
                             </div>
